--- a/src/main/resources/com/cultodeportivo/proyecto_fbd/secondary.fxml
+++ b/src/main/resources/com/cultodeportivo/proyecto_fbd/secondary.fxml
@@ -60,7 +60,7 @@
                <center>
                   <AnchorPane prefHeight="560.0" prefWidth="890.0" stylesheets="@estilos.css" BorderPane.alignment="CENTER">
                      <children>
-                        <AnchorPane fx:id="frame_facturacion" prefHeight="758.0" prefWidth="1040.0">
+                        <AnchorPane fx:id="frame_facturacion" prefHeight="758.0" prefWidth="1040.0" visible="false">
                            <children>
                               <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="740.0" prefWidth="276.0" stylesheets="@estilos.css">
                                  <styleClass>
@@ -154,8 +154,14 @@
                                  </children>
                               </AnchorPane>
                            </children></AnchorPane>
-                        <AnchorPane fx:id="frame_citas" prefHeight="758.0" prefWidth="1041.0" visible="false">
+                        <AnchorPane fx:id="frame_citas" prefHeight="758.0" prefWidth="1041.0">
                            <children>
+                              <AnchorPane fx:id="frame_cancelar_cita" layoutX="340.0" layoutY="8.0" prefHeight="421.0" prefWidth="681.0" stylesheets="@estilos.css" visible="false">
+                                 <styleClass>
+                                    <String fx:value="shadow" />
+                                    <String fx:value="white-bg" />
+                                 </styleClass>
+                              </AnchorPane>
                               <AnchorPane fx:id="frame_reservar_citas" layoutX="340.0" layoutY="8.0" prefHeight="421.0" prefWidth="681.0" stylesheets="@estilos.css">
                                  <styleClass>
                                     <String fx:value="shadow" />
@@ -177,8 +183,8 @@
                                     <Label layoutX="369.0" layoutY="180.0" text="M" />
                                     <Button fx:id="boton_agendar_cita" layoutX="155.0" layoutY="320.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="150.0" styleClass="boton_facturar" stylesheets="@estilos.css" text="Agendar Cita" />
                                     <Label layoutX="89.0" layoutY="237.0" text="Cliente" />
-                                    <TextField fx:id="text_seleccionar_odontologo_citas" layoutX="225.0" layoutY="122.0" />
-                                    <TextField fx:id="text_seleccionar_cliente_citas" layoutX="225.0" layoutY="233.0" />
+                                    <TextField fx:id="text_seleccionar_odontologo_citas" editable="false" layoutX="225.0" layoutY="122.0" />
+                                    <TextField fx:id="text_seleccionar_cliente_citas" editable="false" layoutX="225.0" layoutY="233.0" />
                                     <Button fx:id="button_seleccionar_odontologo_citas" layoutX="440.0" layoutY="120.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="140.0" styleClass="boton_anchor" stylesheets="@estilos.css" text="Buscar Odontologo" />
                                     <Button fx:id="button_seleccionar_cliente_citas" layoutX="440.0" layoutY="232.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="140.0" styleClass="boton_anchor" stylesheets="@estilos.css" text="Buscar Cliente" />
                                  </children>
@@ -222,12 +228,6 @@
                                     <Button fx:id="boton_reservar_cita" layoutX="84.0" layoutY="90.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="150.0" styleClass="boton_anchor" stylesheets="@estilos.css" text="Reservar Cita" />
                                     <Button fx:id="boton_cancelar_cita" layoutX="84.0" layoutY="160.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="150.0" styleClass="boton_eliminar" stylesheets="@estilos.css" text="Cancelar Cita" />
                                  </children>
-                              </AnchorPane>
-                              <AnchorPane fx:id="frame_cancelar_cita" layoutX="340.0" layoutY="8.0" prefHeight="425.0" prefWidth="681.0" stylesheets="@estilos.css" visible="false">
-                                 <styleClass>
-                                    <String fx:value="white-bg" />
-                                    <String fx:value="shadow" />
-                                 </styleClass>
                               </AnchorPane>
                            </children></AnchorPane>
                         <AnchorPane fx:id="frame_clientes" prefHeight="758.0" prefWidth="1041.0" visible="false">
@@ -405,6 +405,52 @@
                               </AnchorPane>
                            </children></AnchorPane>
                         <AnchorPane fx:id="frame_perfil" prefHeight="612.0" prefWidth="1041.0" visible="false" />
+                        <AnchorPane fx:id="seleccionar_doctor" layoutX="340.0" layoutY="8.0" prefHeight="420.0" prefWidth="550.0" stylesheets="@estilos.css" visible="false">
+                           <styleClass>
+                              <String fx:value="white-bg" />
+                              <String fx:value="shadow" />
+                           </styleClass>
+                           <children>
+                              <Button fx:id="boton_cancelar_seleccion_doctor" layoutX="30.0" layoutY="371.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" styleClass="boton_eliminar" stylesheets="@estilos.css" text="Cancelar" />
+                              <Button fx:id="boton_aceptar_seleccion_doctor" layoutX="320.0" layoutY="371.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" styleClass="boton_anchor" stylesheets="@estilos.css" text="Aceptar" />
+                              <TableView fx:id="tabla_seleccionar_doctor" layoutX="30.0" layoutY="84.0" prefHeight="271.0" prefWidth="490.0">
+                                <columns>
+                                  <TableColumn fx:id="tb_selec_doc_nombre" prefWidth="250.0" text="Nombre" />
+                                  <TableColumn fx:id="tb_selec_doc_apellido" prefWidth="239.0" text="Apellidos" />
+                                </columns>
+                              </TableView>
+                              <Label layoutX="30.0" layoutY="14.0" text="Seleccionar Doctor:">
+                                 <font>
+                                    <Font name="System Bold" size="20.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="279.0" layoutY="52.0" text="Buscar:" />
+                              <TextField fx:id="buscador_doctor" layoutX="359.0" layoutY="48.0" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane fx:id="seleccionar_cliente_citas" layoutX="340.0" layoutY="8.0" prefHeight="420.0" prefWidth="550.0" stylesheets="@estilos.css" visible="false">
+                           <styleClass>
+                              <String fx:value="white-bg" />
+                              <String fx:value="shadow" />
+                           </styleClass>
+                           <children>
+                              <Button fx:id="boton_cancelar_seleccion_cliente_citas" layoutX="30.0" layoutY="371.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" styleClass="boton_eliminar" stylesheets="@estilos.css" text="Cancelar" />
+                              <Button fx:id="boton_aceptar_seleccion_cliente_citas" layoutX="320.0" layoutY="371.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" styleClass="boton_anchor" stylesheets="@estilos.css" text="Aceptar" />
+                              <TableView fx:id="tabla_seleccionar_cliente_citas" layoutX="30.0" layoutY="84.0" prefHeight="271.0" prefWidth="490.0">
+                                 <columns>
+                                    <TableColumn fx:id="tb_selec_cli_cit_nombre" prefWidth="250.0" text="Nombre" />
+                                    <TableColumn fx:id="tb_selec_cli_cit_apellido" prefWidth="239.0" text="Apellidos" />
+                                 </columns>
+                              </TableView>
+                              <Label layoutX="30.0" layoutY="14.0" text="Seleccionar Cliente:">
+                                 <font>
+                                    <Font name="System Bold" size="20.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="279.0" layoutY="52.0" text="Buscar:" />
+                              <TextField fx:id="buscador_cliente_citas" layoutX="359.0" layoutY="48.0" />
+                           </children>
+                        </AnchorPane>
                      </children></AnchorPane>
                </center>
             </BorderPane>
